# Breakout

BreakOut/: BreakOut.VC.opendb  BreakOut.ilk  BreakOut.iobj  BreakOut.ipdb  BreakOut.sln  CMakeLists.txt  vc140.idb
BreakOut/BreakOut/: BackgroundMusic.cpp  BackgroundMusic.h  Ball.cpp  Ball.h  Board.h  BreakOut.aps  BreakOut.vcxproj  BreakOut.vcxproj.filters  GameManager.cpp  GameManager.h  HUDManager.cpp  HUDManager.h  ImageNotFound.cpp  ImageNotFound.h  ImageNotFoundException.h  InputManager.cpp  InputManager.h  Main.cpp  MediaManager.cpp  MediaManager.h  Paddle.cpp  Paddle.h  Piece.cpp  Piece.h  Score.cpp  Score.h  TextRender.cpp  TextRender.h  Texture.cpp  Texture.h  Threading.cpp  Threading.h  Timer.cpp  Timer.h  UnableToOptimizeImageException.h  Virus.cpp  Virus.h  Window.cpp  Window.h  packages.config  (+1 more)
BreakOut/BreakOut/Debug/: vc140.idb
BreakOut/BreakOut/Debug/BreakOut.tlog/: BreakOut.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
BreakOut/BreakOut/Release/BreakOut.tlog/: BreakOut.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
BreakOut/BreakOut/x64/Debug/: vc140.idb
BreakOut/BreakOut/x64/Debug/BreakOut.tlog/: BreakOut.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
