cmake_minimum_required(VERSION 3.3)
project(BreakOut)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    BreakOut/res/breakout_sprites.png
    BreakOut/res/cat.png
    BreakOut/Ball.cpp
    BreakOut/Ball.h
    BreakOut/Board.cpp
    BreakOut/Board.h
    BreakOut/GameManager.cpp
    BreakOut/GameManager.h
    BreakOut/InputManager.cpp
    BreakOut/InputManager.h
    BreakOut/Main.cpp
    BreakOut/MediaManager.cpp
    BreakOut/MediaManager.h
    BreakOut/Paddle.cpp
    BreakOut/Paddle.h
    BreakOut/Piece.cpp
    BreakOut/Piece.h
    BreakOut/Texture.cpp
    BreakOut/Texture.h
    BreakOut/Timer.cpp
    BreakOut/Timer.h
    BreakOut/Virus.cpp
    BreakOut/Virus.h
    BreakOut/Window.cpp
    BreakOut/Window.h
    packages/sdl2.v140.2.0.4/build/native/include/begin_code.h
    packages/sdl2.v140.2.0.4/build/native/include/close_code.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_assert.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_atomic.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_audio.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_bits.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_blendmode.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_clipboard.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_config.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_config_android.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_config_iphoneos.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_config_macosx.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_config_minimal.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_config_pandora.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_config_psp.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_config_windows.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_config_winrt.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_config_wiz.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_copying.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_cpuinfo.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_egl.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_endian.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_error.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_events.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_filesystem.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_gamecontroller.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_gesture.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_haptic.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_hints.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_joystick.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_keyboard.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_keycode.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_loadso.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_log.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_main.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_messagebox.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_mouse.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_mutex.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_name.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_opengl.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_opengl_glext.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_opengles.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_opengles2.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_opengles2_gl2.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_opengles2_gl2ext.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_opengles2_gl2platform.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_opengles2_khrplatform.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_pixels.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_platform.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_power.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_quit.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_rect.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_render.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_revision.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_rwops.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_scancode.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_shape.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_stdinc.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_surface.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_system.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_syswm.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_test.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_test_assert.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_test_common.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_test_compare.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_test_crc32.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_test_font.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_test_fuzzer.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_test_harness.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_test_images.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_test_log.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_test_md5.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_test_random.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_thread.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_timer.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_touch.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_types.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_version.h
    packages/sdl2.v140.2.0.4/build/native/include/SDL_video.h
    packages/sdl2_image.v140.2.0.1/build/native/include/SDL_image.h
    packages/sdl2_ttf.v140.2.0.14/build/native/include/SDL_ttf.h
    packages/zlib.v140.windesktop.msvcstl.dyn.rt-dyn.1.2.8.8/build/native/include/crc32.h
    packages/zlib.v140.windesktop.msvcstl.dyn.rt-dyn.1.2.8.8/build/native/include/deflate.h
    packages/zlib.v140.windesktop.msvcstl.dyn.rt-dyn.1.2.8.8/build/native/include/gzguts.h
    packages/zlib.v140.windesktop.msvcstl.dyn.rt-dyn.1.2.8.8/build/native/include/inffast.h
    packages/zlib.v140.windesktop.msvcstl.dyn.rt-dyn.1.2.8.8/build/native/include/inffixed.h
    packages/zlib.v140.windesktop.msvcstl.dyn.rt-dyn.1.2.8.8/build/native/include/inflate.h
    packages/zlib.v140.windesktop.msvcstl.dyn.rt-dyn.1.2.8.8/build/native/include/inftrees.h
    packages/zlib.v140.windesktop.msvcstl.dyn.rt-dyn.1.2.8.8/build/native/include/trees.h
    packages/zlib.v140.windesktop.msvcstl.dyn.rt-dyn.1.2.8.8/build/native/include/zconf.h
    packages/zlib.v140.windesktop.msvcstl.dyn.rt-dyn.1.2.8.8/build/native/include/zlib.h
    packages/zlib.v140.windesktop.msvcstl.dyn.rt-dyn.1.2.8.8/build/native/include/zutil.h)

add_executable(BreakOut ${SOURCE_FILES})